tests/baselines/reference/unusedSingleParameterInContructor.errors.txt
tests/cases/compiler/unusedSingleParameterInContructor.ts(3,17): error TS6133: Parameter 'person' has never been used.
tests/cases/compiler/unusedSingleParameterInContructor.ts(4,13): error TS6132: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedSingleParameterInContructor.ts (2 errors) ====
    
    class Dummy {
        constructor(person: string) {
                    ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person' has never been used.
            var unused = 20;
                ~~~~~~
!!! error TS6132: Variable 'unused' has never been used.
        }
    }